--- a/memedona-client/src/index.scss
+++ b/memedona-client/src/index.scss
@@ -1,16 +1,36 @@
+@import "./library/scss/partials/variables";
+
 @font-face {
   font-family: "Minecraft";
   src: url(assets/fonts/Minecraft.ttf);
   font-weight: normal;
 }
 
-* {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+
+html {
   box-sizing: border-box;
+  font-size: 62.5%;
+  background-color: $primary-background-color;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
   border: 0;
 }
 
-html {
-  font-size: 62.5%;
+button,
+input[type="submit"],
+input[type="reset"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
