--- a/memedona-client/src/components/App/AppUi.scss
+++ b/memedona-client/src/components/App/AppUi.scss
@@ -1,6 +1,6 @@
 .AppUi {
-    height: 100vh;
+  height: 100vh;
 
   display: grid;
-  grid-template-rows: 10% 20%;
+  grid-template-rows: 70px 90px auto;
 }
