--- a/memedona-client/src/components/TopicList/TopicList.scss
+++ b/memedona-client/src/components/TopicList/TopicList.scss
@@ -1,6 +1,11 @@
 @import "../../library/scss/partials/variables";
 
 .TopicList {
+  // position: sticky;
+  // top: 0px;
+
+  // width: 100%;
+  // height: 90px;
   border-top: $topic-border-size solid $topic-border-color;
 
   display: grid;
