--- a/memedona-client/src/components/MemeList/MemeList.scss
+++ b/memedona-client/src/components/MemeList/MemeList.scss
@@ -1,7 +1,7 @@
 @import "../../library/scss/partials/variables";
 
 .MemeList {
-  background-color: red;
+  background-color: $primary-background-color;
   overflow-y: scroll;
   overflow-x: hidden;
 }
