--- a/memedona-client/src/components/TopicList/TopicList.scss
+++ b/memedona-client/src/components/TopicList/TopicList.scss
@@ -1,13 +1,7 @@
 @import "../../library/scss/partials/variables";
 
 .TopicList {
-  // position: sticky;
-  // top: 0px;
-
-  // width: 100%;
-  // height: 90px;
-  border-top: $topic-border-size solid $topic-border-color;
-
+  margin-top: 5px;
   display: grid;
   grid-template-columns: 70px auto 70px;
 
@@ -24,4 +18,10 @@
   font-size: $arrow-font-size;
   font-weight: 300;
   color: $arrow-color;
+}
+
+@media only screen and (min-width: $tablet-breakpoint) {
+  .Arrow {
+    font-size: $arrow-font-size--tablet;
+  }
 }
