Created Loading animation, solved center topicList

--- a/memedona-client/src/components/Header/Header.scss
+++ b/memedona-client/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
 .Header {
   border-bottom: $header-border-size solid $header-border-color;
 
-  width: 100vw;
+  width: 100%;
   height: $header-size;
   background-color: $primary-background-color;
 }
