--- a/memedona-client/src/components/MemeList/Meme.scss
+++ b/memedona-client/src/components/MemeList/Meme.scss
@@ -1,6 +1,10 @@
 @import "../../library/scss/partials/variables";
 
 .Meme {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+
   margin-bottom: 15px;
 
   color: $primary-font-color;
