--- a/memedona-client/src/components/App/AppUi.scss
+++ b/memedona-client/src/components/App/AppUi.scss
@@ -4,5 +4,12 @@
   height: 100vh;
 
   display: grid;
+  grid-template-rows: $header-size auto;
   justify-items: center;
+}
+
+@media only screen and (min-width: $tablet-breakpoint) {
+  .AppUi {
+    grid-template-rows: $header-size--tablet auto;
+  }
 }
