Frontend looks amazing!

--- a/memedona-client/src/components/MemeList/Meme.scss
+++ b/memedona-client/src/components/MemeList/Meme.scss
@@ -50,6 +50,11 @@
   align-items: center;
 }
 
+.Meme__footer__button--right {
+  margin-left: auto;
+  margin-right: 15px;
+}
+
 .Meme__footer__button__counter {
   margin-left: 9px;
   font-size: $meme-footer-font-size;
