Add "add to home screen" feature

--- a/memedona-client/src/components/AddToHomeScreen/A2HS.scss
+++ b/memedona-client/src/components/AddToHomeScreen/A2HS.scss
@@ -1,60 +1,66 @@
 @import "../../library/scss/partials/variables";
 
 .A2HS {
-  position: fixed;
-  bottom: 0;
+  width: 100%;
 
-  height: $a2hs-height;
-  width: 100vw;
-
-  padding: $a2hs-padding;
-
-  display: grid;
-  grid-template-rows: 70px 70px $a2hs-img-height;
-  justify-items: center;
-  align-items: center;
-
+  color: $primary-font-color;
   font-family: $primary-font;
   text-align: center;
-  color: $primary-font-color;
-  background-color: $secondary-background-color;
+  font-weight: 400;
 }
 
-.button {
-  border-radius: 25px;
+.A2HS__title {
+  margin-top: 30px;
+  font-size: 1.7rem;
+}
 
-  background-color: $primary-font-color;
-  color: $primary-background-color;
+.A2HS__subtitle {
+  margin: 10px;
+  font-size: 1.4rem;
+  font-weight: 300;
+}
+
+.A2HS__imgdiv {
+  max-width: 300px;
+  margin: 20px auto;
+
+  display: grid;
+  grid-template-columns: 60% 40%;
+  gap: 20px;
+}
+
+.A2HS__imgdiv__image {
+  width: 100%;
 }
 
 .A2HS__button {
-  @extend .button;
-  padding: 15px;
-  font-weight: 300;
-  font-size: 2rem;
+  display: block;
+  width: 185px;
+  height: 35px;
+  margin: 15px auto;
+
+  font-size: 1.6rem;
+
+  background-color: $button-secondary-color;
 }
 
-.A2HS__X {
-  @extend .button;
-  height: $a2hs-X-height;
-  width: $a2hs-X-height;
-
-  position: absolute;
-  top: $a2hs-padding;
-  right: $a2hs-padding;
-
-  font-size: 2.3rem;
+.A2HS__button:hover {
+  background-color: $button-secondary-color--hover;
 }
 
-.A2HS__text {
-  font-size: 1.5rem;
+.A2HS__button--primary {
+  background-color: $button-primary-color;
 }
 
-.A2HS__text__span {
-  font-family: $secondary-font;
+.A2HS__button--primary:hover {
+  background-color: $button-primary-color--hover;
+}
+
+.A2HS__doof-happy {
+  max-width: 300px;
+}
+
+.brand {
   color: $brand-color;
-}
-
-.A2HS__img {
-  height: 100%;
+  font-family: $secondary-font;
 }
