--- a/memedona-client/src/components/Info/Info.scss
+++ b/memedona-client/src/components/Info/Info.scss
@@ -47,6 +47,8 @@ h4 {
 
 .Setting__option__h4 {
   padding-left: 15px;
+  text-decoration: underline $brand-color;
+  text-decoration-thickness: 3px;
 }
 
 .Setting__option__icon {
